feat(settings): ✨ exclude .DS_Store by default (case-insensitive)
- Add */.ds_store to Defaults.DEFAULT_EXCLUDED and fs defaults
- Merge the pattern during validation like password sidecars
- Matching lowercases paths, so .DS_Store / .ds_store are covered

Co-authored-by: David Pilato <david@pilato.fr>